[package]
name = "selendra-statement-table"
version = "0.2.2"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
primitives = { package = "selendra-primitives", path = "../../primitives" }
