[package]
name = "selendra-node-collation-generation"
version = "0.1.4"
authors = ["Selendra info@selendra.org"]
edition = "2018"

[dependencies]
futures = "0.3.17"
tracing = "0.1.28"
thiserror = "1.0.26"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["bit-vec", "derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-maybe-compressed-blob  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

selendra-erasure-coding = { path = "../../modules/erasure-coding" }
selendra-node-primitives = { path = "../primitives" }
selendra-node-subsystem = { path = "../subsystem" }
selendra-node-subsystem-util = { path = "../subsystem-util" }
selendra-primitives = { path = "../../primitives" }

[dev-dependencies]
selendra-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
