[package]
name = "selendra-node-collation-generation"
version = "0.2.3"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
tracing = "0.1.31"
selendra-erasure-coding = { path = "../../modules/erasure-coding" }
selendra-node-primitives = { path = "../primitives" }
selendra-node-subsystem = { path = "../subsystem" }
selendra-node-subsystem-util = { path = "../subsystem-util" }
selendra-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-maybe-compressed-blob  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
thiserror = "1.0.30"
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["bit-vec", "derive"] }

[dev-dependencies]
selendra-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
test-helpers = { package = "selendra-primitives-test-helpers", path = "../../primitives/test-helpers" }
