[package]
name = "selendra-node-jaeger"
version = "0.1.6"
authors = ["Selendra info@selendra.org"]
edition = "2018"
description = "Selendra Jaeger primitives"

[dependencies]
async-std = "1.8.0"
mick-jaeger = "0.1.6"
lazy_static = "1.4"
parking_lot = "0.11.1"
thiserror = "1.0.30"
log = "0.4.13"
parity-scale-codec = { version = "2.3.1", default-features = false }

sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

selendra-primitives = { path = "../../primitives" }
selendra-node-primitives = { path = "../primitives" }
