[package]
name = "selendra-node-jaeger"
version = "0.2.3"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
description = "Selendra Jaeger primitives"

[dependencies]
async-std = "1.8.0"
mick-jaeger = "0.1.7"
lazy_static = "1.4"
parking_lot = "0.12.0"
selendra-primitives = { path = "../../primitives" }
selendra-node-primitives = { path = "../primitives" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
thiserror = "1.0.30"
log = "0.4.13"
parity-scale-codec = { version = "3.0.0", default-features = false }
