[package]
name = "selendra-node-metrics"
version = "0.1.4"
authors = ["Selendra info@selendra.org"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
futures = "0.3.17"
futures-timer = "3.0.2"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }

metered-channel = { path = "../metered-channel" }

[features]
default = []
