[package]
name = "selendra-node-metrics"
version = "0.1.7"
authors = ["Selendra info@selendra.org"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
futures = "0.3.17"
futures-timer = "3.0.2"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

metered-channel = { path = "../metered-channel" }

[features]
default = []
