[package]
name = "selendra-overseer"
version = "0.1.7"
authors = ["Selendra info@selendra.org"]
edition = "2018"

[dependencies]
futures = "0.3.17"
futures-timer = "3.0.2"
parking_lot = "0.11.1"
tracing = "0.1.29"
lru = "0.7.0"
parity-util-mem = { version = ">= 0.10.1", default-features = false }
client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }

selendra-node-network-protocol = { path = "../network/protocol" }
selendra-node-primitives = { path = "../primitives" }
selendra-node-subsystem-types = { path = "../subsystem-types" }
selendra-node-metrics = { path = "../metrics" }
selendra-primitives = { path = "../../primitives" }
selendra-overseer-gen = { path = "./overseer-gen" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.17", features = ["thread-pool"] }
femme = "2.1.1"
assert_matches = "1.4.0"
metered-channel = { path = "../metered-channel" }

[features]
default = []
