[package]
name = "selendra-node-primitives"
version = "0.1.4"
authors = ["Selendra info@selendra.org"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
bounded-vec = "0.4"
futures = "0.3.17"
schnorrkel = "0.9.1"
thiserror = "1.0.26"
serde = { version = "1.0.130", features = ["derive"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

selendra-primitives = { path = "../../primitives" }
selendra-parachain = { path = "../../modules/parachain", default-features = false }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = "0.9.0"

[dev-dependencies]
selendra-erasure-coding = { path = "../../modules/erasure-coding" }
