[package]
name = "selendra-node-primitives"
version = "0.1.8"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
bounded-vec = "0.4"
futures = "0.3.17"
selendra-primitives = { path = "../../primitives" }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
selendra-parachain = { path = "../../modules/parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = "0.9.0"

[dev-dependencies]
selendra-erasure-coding = { path = "../../modules/erasure-coding" }
