[package]
name = "selendra-rpc"
version = "0.1.6"
authors = ["Selendra info@selendra.org"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }

selendra-primitives = { path = "../../primitives" }
selendra-runtime = { path = "../../runtime/selendra" }
pallet-ethereum = { path = "../../vendors/frontier/frame/ethereum" }
fp-rpc = { path = "../../vendors/frontier/primitives/rpc"}
fc-rpc = { path = "../../vendors/frontier/client/rpc" }
fc-rpc-core = { path = "../../vendors/frontier/client/rpc-core" }
fc-db = { path = "../../vendors/frontier/client/db" }
